--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="container position-absolute top-50 start-50 translate-middle">
         <div class="text-center text-white">
           <h1 class="mb-4">I am Morgan Freeman</h1>
-          <h3 class="typed"><span>Designer</span>|</h3>
+          <h3 class="typed"> </h3>
         </div>
       </div>
     </div>
