--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNavDropdown"
+          class="collapse navbar-collapse justify-content-end nav-mob"
+          id="navbarSupportedContent"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
